--- a/Pages/SpecificBehaviorInfoPage.xaml
+++ b/Pages/SpecificBehaviorInfoPage.xaml
@@ -18,10 +18,10 @@ xmlns:gauge="clr-namespace:Syncfusion.Maui.Gauges;assembly=Syncfusion.Maui.Gauge
                     FontAttributes="Bold, Italic"
                     TextColor="Red" >
             </Label>
-            <Entry WidthRequest="300" HeightRequest="40" ></Entry>
-            <Label Text="Enter Cue Details" TextColor="Black" 
-                   FontAttributes="Italic">
-            </Label>
+            <Editor WidthRequest="400" 
+                   HeightRequest="75" 
+                   Placeholder="Enter Text">
+            </Editor>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
@@ -29,10 +29,10 @@ xmlns:gauge="clr-namespace:Syncfusion.Maui.Gauges;assembly=Syncfusion.Maui.Gauge
                     FontAttributes="Bold, Italic" 
                     TextColor="Blue" >
             </Label>
-            <Entry WidthRequest="300" HeightRequest="40" ></Entry>
-            <Label Text="Enter Cue Details" TextColor="Black" 
-                   FontAttributes="Italic">
-            </Label>
+            <Editor WidthRequest="400" 
+                   HeightRequest="75" 
+                   Placeholder="Enter Text">
+            </Editor>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
@@ -40,10 +40,10 @@ xmlns:gauge="clr-namespace:Syncfusion.Maui.Gauges;assembly=Syncfusion.Maui.Gauge
                     FontAttributes="Bold, Italic" 
                    TextColor="Green">
             </Label>
-            <Entry WidthRequest="175" HeightRequest="40" ></Entry>
-            <Label Text="Enter Release Details" TextColor="Black" 
-                    FontAttributes="Italic" >
-            </Label>
+            <Editor WidthRequest="400" 
+                   HeightRequest="75" 
+                   Placeholder="Enter Text">
+            </Editor>
         </HorizontalStackLayout>
 
         <gauge:SfLinearGauge
@@ -65,6 +65,17 @@ xmlns:gauge="clr-namespace:Syncfusion.Maui.Gauges;assembly=Syncfusion.Maui.Gauge
                     Fill="Black"/>
             </gauge:SfLinearGauge.MarkerPointers>
         </gauge:SfLinearGauge>
+
+        <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
+            <Label Text="Proficiency Description" 
+            FontAttributes="Bold" 
+            TextColor="SlateGray" >
+            </Label>
+            <Editor WidthRequest="400" 
+                   HeightRequest="75" 
+                   Placeholder="Enter Text">
+            </Editor>
+        </HorizontalStackLayout>
     </VerticalStackLayout>
 
 </ContentPage>
