data export page

--- a/Pages/DataExportPage.xaml
+++ b/Pages/DataExportPage.xaml
@@ -19,7 +19,7 @@
               Luna
               Max
               ..."
-        VerticalOptions="Center" 
+        VerticalOptions="Center" FontSize="10"
         HorizontalOptions="Center" />
 
         <Button 
