added base layout to data export and trainer bio pages

--- a/Pages/DataExportPage.xaml
+++ b/Pages/DataExportPage.xaml
@@ -28,7 +28,7 @@
           HorizontalOptions="CenterAndExpand" />
 
         <Button 
-             Text="Export Session >"  Margin="5"
+             Text="Export Past Session >"  Margin="5"
               VerticalOptions="End" 
              HorizontalOptions="CenterAndExpand" />
         
