--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -38,7 +38,7 @@
         </Tab>
     <Tab
         Title = "Testing Page">
-            <ShellContent ContentTemplate="{DataTemplate local:TrainerSearch}" />
+            <ShellContent ContentTemplate="{DataTemplate local:TrainerBioPage}" />
 
         </Tab>
 
