--- a/Pages/AddDogPage.xaml
+++ b/Pages/AddDogPage.xaml
@@ -3,7 +3,7 @@
 xmlns:picker="clr-namespace:Syncfusion.Maui.Picker;assembly=Syncfusion.Maui.Picker"
 xmlns:inputs="clr-namespace:Syncfusion.Maui.Inputs;assembly=Syncfusion.Maui.Inputs"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Pages.AddDogPage"
+             x:Class="MauiApp1.AddDogPage"
              Title="AddDogPage">
     <ScrollView>
         <Grid>
@@ -14,44 +14,50 @@ xmlns:inputs="clr-namespace:Syncfusion.Maui.Inputs;assembly=Syncfusion.Maui.Inpu
                 <RowDefinition Height=".2*"/>
                 <RowDefinition Height=".2*"/>
                 <RowDefinition Height=".2*"/>
-                <RowDefinition Height=".2*"/>
+                <RowDefinition Height=".1*"/>
+                <RowDefinition Height=".1*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width=".5*"/>
+                <ColumnDefinition Width="*"/>
+
             </Grid.ColumnDefinitions>
 
-            <Frame Grid.Row="0"  BackgroundColor="White">
+            <Frame Grid.Row="0"   BackgroundColor="White">
                 <HorizontalStackLayout>
-                    <Label Text="Name: "  VerticalOptions="Center"/>
-                    <Entry/>
+                    <Label Text="Name: "  VerticalOptions="Center" />
+                    <Entry VerticalOptions="CenterAndExpand" MinimumWidthRequest="100" MaxLength="50" Placeholder="Enter Dog's Name"/>
+                </HorizontalStackLayout>
+            </Frame>
+
+            <Frame Grid.Row="1"   BackgroundColor="White">
+                <HorizontalStackLayout>
+                    <Label Text="Breed: " VerticalTextAlignment="Center"/>
+                    <inputs:SfComboBox WidthRequest="200" HeightRequest="50" IsEditable="True" Placeholder="Select Dog Breed">
+                        <inputs:SfComboBox.ItemsSource>
+                            <x:Array Type="{x:Type x:String}">
+                                <x:String>Item 1</x:String>
+                                <x:String>Item 2</x:String>
+                                <x:String>Item 3</x:String>
+                            </x:Array>
+                        </inputs:SfComboBox.ItemsSource>
+                    </inputs:SfComboBox>
                 </HorizontalStackLayout>
             </Frame>
 
 
-            <Label Text="Breed: " Grid.Row="1" Grid.Column="0"/>
-            <inputs:SfComboBox WidthRequest="200" HeightRequest="50" Grid.Row="1" Grid.Column="1" IsEditable="True">
-                <inputs:SfComboBox.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>Item 1</x:String>
-                        <x:String>Item 2</x:String>
-                        <x:String>Item 3</x:String>
-                    </x:Array>
-                </inputs:SfComboBox.ItemsSource>
-            </inputs:SfComboBox>
-
-            <Frame BackgroundColor="White" Grid.Row="2">
+            <Frame BackgroundColor="White" Grid.Row="2"  >
                 <HorizontalStackLayout>
-                    <Label Text="Birthday: " Grid.Row="2" Grid.Column="0"/>
-                    <Button/>
-                    <picker:SfDatePicker x:Name="datePicker" picker:Mode="RelativeDialog" Grid.Row="2" Grid.Column="1"/>
+                    <Label Text="Birthday: " VerticalTextAlignment="Center"/>
+                    <Button x:Name="dateButton" Text="Select a birthday" HeightRequest="40" Clicked="DatePick"/> 
+                    <picker:SfDatePicker x:Name="datePicker" picker:Mode="RelativeDialog" Grid.Row="2" Grid.Column="1" RelativePosition="AlignBottom" Closed="datePicker_Closed" Format="MM_dd_yyyy"/>
                 </HorizontalStackLayout>
             </Frame>
 
 
-            <Frame Grid.Row="3" BackgroundColor="White">
+            <Frame Grid.Row="3"   BackgroundColor="White">
                 <HorizontalStackLayout>
-                    <Label Text="Sex: "/>
-                    <inputs:SfComboBox WidthRequest="200" HeightRequest="50" Grid.Row="1" Grid.Column="1" IsEditable="True">
+                    <Label Text="Sex: " VerticalOptions="Center"/>
+                    <inputs:SfComboBox WidthRequest="200" HeightRequest="50" IsEditable="True" VerticalOptions="Center">
                         <inputs:SfComboBox.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
                                 <x:String>Male</x:String>
@@ -62,18 +68,23 @@ xmlns:inputs="clr-namespace:Syncfusion.Maui.Inputs;assembly=Syncfusion.Maui.Inpu
                 </HorizontalStackLayout>
             </Frame>
 
-            <Frame Grid.Row="4" BackgroundColor="White">
+            <Frame Grid.Row="4"   BackgroundColor="White">
                 <HorizontalStackLayout>
                     <Label Text="Weight: " VerticalTextAlignment="Center"/>
                     <inputs:SfNumericEntry x:Name="numericEntry" UpDownPlacementMode="Hidden"/>
                 </HorizontalStackLayout>
             </Frame>
 
+            <Frame Grid.Row="5"   BackgroundColor="White">
+                <VerticalStackLayout>
+                    <Label Text="Bio:"/>
+                    <Editor Placeholder="Enter a short bio about you dog..." MaxLength="500"/>
+                </VerticalStackLayout>
+            </Frame>
 
-            <Label Text="Bio:" Grid.Row="5" Grid.Column="0"/>
-            <Editor Text="Enter a short bio about you dog..." MaxLength="500" Grid.Row="5" Grid.Column="1"/>
 
-            <Button Text="Upload a picture of your pup" Grid.Row="6" Grid.ColumnSpan="2"/>
+            <Button Text="Upload a picture of your pup" Grid.Row="6" />
+            <Button Text="Submit" Grid.Row="7"  />
         </Grid>
     </ScrollView>
 </ContentPage>
