--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -4,94 +4,73 @@
               xmlns:listview="clr-namespace:Syncfusion.Maui.ListView;assembly=Syncfusion.Maui.ListView"
              x:Class="MauiApp1.General"
               xmlns:local="clr-namespace:MauiApp1">
-    <!--<ContentPage.BindingContext>
-        <local:GeneralModel> </local:GeneralModel>
-     </ContentPage.BindingContext>
-      <listview:SfListView ItemsSource="{Binding GenDetails}" ItemSize="94">
-       <listview:SfListView.ItemTemplate>
-          <DataTemplate>
-               <Grid>
-                   <Grid.RowDefinitions>
-                       <RowDefinition Height="0.4"></RowDefinition>
-                       <RowDefinition Height="0.6"></RowDefinition>
-                   </Grid.RowDefinitions>
-                   <Label Text="{Binding GenName}" FontAttributes="Bold" TextColor="MediumPurple" FontSize="21"></Label>
-                   <Label Text="{Binding GenDescription}" Grid.Row="1" FontSize="15"></Label>
-               </Grid>
-           </DataTemplate>
-       </listview:SfListView.ItemTemplate>
-   </listview:SfListView> -->
+
 <VerticalStackLayout>
         <Label 
 Text="General"   Margin="5" FontAttributes="Bold" FontSize="25"
  VerticalOptions="Center" 
  HorizontalOptions="Start" />
-    
-        <Grid Margin="30">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width=".4*"></ColumnDefinition>
-                <ColumnDefinition Width=".4*"></ColumnDefinition>
-                <ColumnDefinition Width=".4*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Image Source="defaultpfp.png" />
-            
-                <Label Grid.Column="1"
-                        Grid.ColumnSpan="2"
-                  Text="John Smith"     
-               HorizontalOptions="Start"
+       <Label
+    Text="Your Account at a Glance"   Margin="5" FontAttributes="Bold" FontSize="20"
+    VerticalOptions="Center" 
+    HorizontalOptions="Start" />
+
+        <HorizontalStackLayout>
+            <Image Source="defaultpfp.png" Margin="10" HeightRequest="120"/>
+            <VerticalStackLayout>
+                <HorizontalStackLayout>
+                <Label 
+                  Text="John Smith" FontSize="16"    
+               HorizontalOptions="Start" Margin="5"
                VerticalOptions="Start" />
             
-                <Label Grid.Column="1"
-                        Grid.ColumnSpan="2"
-             Text="johnsmith123" FontAttributes="Italic" 
-             HorizontalOptions="Start"
+                <Label 
+             Text="johnsmith123" FontAttributes="Italic"  
+             HorizontalOptions="Start" Margin="5"
              VerticalOptions="Center" />
-     
-            <Label Grid.Column="1"
-                    Grid.ColumnSpan="2"
+                </HorizontalStackLayout>
+                <Label 
              Text="Number of Dogs: X"
-         HorizontalOptions="Start"
+         HorizontalOptions="Start" Margin="5"
          VerticalOptions="End" />
-
-            <Label Grid.Column="1"
-           Grid.ColumnSpan="2"
-            Text="Account Type: Trainer"
-            HorizontalOptions="End"
+               
+            <Label 
+            Text="Trainer         " FontAttributes="Bold"
+            HorizontalOptions="Start"  Margin="5"
             VerticalOptions="End" />
+                <HorizontalStackLayout>
+                    <Button 
+    Text="Edit Profile >"
+    VerticalOptions="End"  Margin="5" Clicked="AccountPage_Clicked"
+    HorizontalOptions="End"  />
 
-        </Grid>
-    
+                    <Button 
+        Text="Add a Dog >"  Margin="5" Clicked="AddNewDog_Clicked"
+        VerticalOptions="End" FontSize="13"
+        HorizontalOptions="CenterAndExpand" />
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </HorizontalStackLayout>
+
         <Button 
-     Text="Edit Account >"
-     VerticalOptions="Start"  Margin="5" Clicked="AccountPage_Clicked"
-    HorizontalOptions="CenterAndExpand" />
-     
-            <Button 
+ Text="Adjust Settings >"  Margin="5"  Clicked="SettingsPage_Clicked"
+ VerticalOptions="End"  
+ HorizontalOptions="Fill" />
+
+        <Button 
         Text="Trainer Search >" Clicked="TrainerSearch_Clicked"
         VerticalOptions="End"  Margin="5"
-        HorizontalOptions="CenterAndExpand" />
+        HorizontalOptions="Fill" />
+
 
         <Button 
-        Text="Add New Dog"  Margin="5" Clicked="AddNewDog_Clicked"
-        VerticalOptions="End" 
-        HorizontalOptions="CenterAndExpand" />
-
-        <Button 
-        Text="Adjust Settings >"  Margin="5"  Clicked="SettingsPage_Clicked"
-        VerticalOptions="End"  
-        HorizontalOptions="CenterAndExpand" />
-      
-            <Button 
         Text="Print/Export Data >"  Margin="5" Clicked="DataExportPage_Clicked"
         VerticalOptions="End" 
-        HorizontalOptions="CenterAndExpand" />
+        HorizontalOptions="Fill" />
 
             <Button 
-        Text="Logout X"  Margin="5" Clicked="DataExportPage_Clicked"
-        VerticalOptions="End" 
+        Text="Logout X"  Margin="25"
+        VerticalOptions="End" BackgroundColor="Red"
         HorizontalOptions="CenterAndExpand" />
 
     </VerticalStackLayout>
