--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -20,24 +20,25 @@ Text="General"   Margin="5" FontAttributes="Bold" FontSize="25"
             <VerticalStackLayout>
                 <HorizontalStackLayout>
                 <Label 
-                  Text="John Smith" FontSize="16"    
+                  Text="John Smith " FontSize="16"    
                HorizontalOptions="Start" Margin="3"
                VerticalOptions="Start" />
             
                 <Label 
-             Text="johnsmith123" FontAttributes="Italic"  FontSize="13"
+             Text=" johnsmith123" FontAttributes="Italic"  FontSize="13"
              HorizontalOptions="Start" Margin="5"
              VerticalOptions="Center" />
                 </HorizontalStackLayout>
-                <Label 
-             Text="Dogs: #"
-         HorizontalOptions="Start" Margin="3"
-         VerticalOptions="End" />
-               
+              
             <Label
-            Text="Trainer" FontAttributes="Bold"
-            HorizontalOptions="Start"  Margin="3"
+            Text="Trainer" FontAttributes="Bold" FontSize="14"
+            HorizontalOptions="Start"  Margin="2"
             VerticalOptions="End" />
+                <Label 
+    Text="Total Dogs: #"
+HorizontalOptions="Start" Margin="2"
+VerticalOptions="End" />
+
                 <HorizontalStackLayout>
                     <Button 
     Text="Edit Profile >"
